--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
     </div>
 
     <div class="header-contact">
-      <a href="tel:093-383-1327" class="header-tel">TEL. 093-383-1327</a>
+      <p class="header-tel">TEL. 093-383-1327</p>
     </div>
   </header>
 
@@ -110,6 +110,7 @@
     </div>
   </section>
 
+  <!-- フッター -->
   <footer>
     <div class="footer-container">
       <div class="footer-logo-area">
@@ -122,6 +123,7 @@
       </div>
 
       <div class="footer-contact-area">
+        
         <div class="footer-contact-grid" aria-label="連絡先">
           <div class="contact-row contact-row-tel">
             <span class="contact-label">TEL</span>
@@ -138,7 +140,7 @@
 
           <div class="contact-row contact-row-policy">
             <span class="contact-label">Policy</span>
-            <a href="privacy.html" target="_blank" rel="noopener">プライバシーポリシー</a>
+            <a href="privacypolicy.html" target="_blank" rel="noopener">プライバシーポリシー</a>
           </div>
         </div>
       </div>
@@ -146,6 +148,9 @@
       <p class="footer-copyright">&copy; 2026 株式会社iK All Rights Reserved.</p>
     </div>
   </footer>
+
+  <!-- TOPへ戻るボタン -->
+  <button id="to-top" aria-label="トップへ戻る">▲</button>
 
   <script src="script.js?v=20260119-1" defer></script>
 </body>
