--- a/contct-policy.html
+++ b/contct-policy.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="format-detection" content="telephone=no">
 
-  <title>個人情報保護方針 | 株式会社iK</title>
+  <title>お問い合わせに関する個人情報について｜iK相談支援センター</title>
 
   <!-- ファビコン -->
   <link rel="icon" href="picmov/iK-logo.png" type="image/png">
@@ -18,30 +18,23 @@
   <link rel="stylesheet" href="style.css?v=20260122-1">
 </head>
 
-<body>
+<body class="page-about">
   <div id="top"></div>
-
-  <!-- オープニングアニメーション -->
-  <div id="opening-splash">
-    <img src="picmov/iK-logo.png" alt="株式会社iK ロゴ" id="splash-mark">
-    <div id="splash-logo">iK相談支援センター</div>
-  </div>
 
   <header>
     <div class="logo">
-      <a href="#top">iK相談支援センター</a>
+      <a href="index.html#top">iK相談支援センター</a>
     </div>
 
     <nav class="pc-nav" id="nav-menu">
       <ul>
-        <li><a href="#services">相談内容</a></li>
-        <li><a href="#flow">相談の流れ</a></li>
-        <li><a href="about.html">事業所案内</a></li>
-        <li><a href="#contact">お問い合わせ</a></li>
+        <li><a href="index.html#services">相談内容</a></li>
+        <li><a href="index.html#flow">相談の流れ</a></li>
+        <li><a href="about.html" aria-current="page">事業所案内</a></li>
+        <li><a href="index.html#contact">お問い合わせ</a></li>
       </ul>
     </nav>
 
-    <!-- ハンバーガー（CSS描画：span + 擬似要素） -->
     <div class="menu-btn" id="menu-toggle" aria-label="メニューを開閉" role="button" tabindex="0">
       <span></span>
     </div>
@@ -209,6 +202,48 @@
     <p class="policy-meta">制定日：2026年1月1日</p>
     <a class="policy-back" href="index.html#contact">お問い合わせへ戻る</a>
   </main>
+
+  <!-- フッター -->
+  <footer>
+    <div class="footer-container">
+      <div class="footer-logo-area">
+        <h3>株式会社iK</h3>
+        <p class="footer-address">
+          <a href="https://maps.google.com/?q=〒802-0831 北九州市小倉南区八重洲町11-20" target="_blank" rel="noopener">
+            〒802-0831 北九州市小倉南区八重洲町11-20 2階
+          </a>
+        </p>
+      </div>
+
+      <div class="footer-contact-area">
+        
+        <div class="footer-contact-grid" aria-label="連絡先">
+          <div class="contact-row contact-row-tel">
+            <span class="contact-label">TEL</span>
+            <a href="tel:093-383-1327" class="tel-number">093-383-1327</a>
+            <span class="divider">/</span>
+            <span class="contact-label">FAX</span>
+            <span class="fax-number">093-383-1328</span>
+          </div>
+
+          <div class="contact-row contact-row-mail">
+            <span class="contact-label">Mail</span>
+            <a href="mailto:iks.080101.iks@gmail.com">iks.080101.iks@gmail.com</a>
+          </div>
+
+          <div class="contact-row contact-row-policy">
+            <span class="contact-label">Policy</span>
+            <a href="privacypolicy.html" target="_blank" rel="noopener">プライバシーポリシー</a>
+          </div>
+        </div>
+      </div>
+
+      <p class="footer-copyright">&copy; 2026 株式会社iK All Rights Reserved.</p>
+    </div>
+  </footer>
+
+  <!-- TOPへ戻るボタン -->
+  <button id="to-top" aria-label="トップへ戻る">▲</button>
 
   <script src="script.js?v=20260119-1" defer></script>
 </body>
