--- a/about.html
+++ b/about.html
@@ -4,16 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="format-detection" content="telephone=no">
-
   <title>事業所案内｜iK相談支援センター</title>
-
+  
   <!-- ファビコン -->
   <link rel="icon" href="picmov/iK-logo.png" type="image/png">
-
+  
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Kiwi+Maru:wght@300;400;500&display=swap" rel="stylesheet">
-
+  
   <!-- CSS -->
   <link rel="stylesheet" href="style.css?v=20260122-1">
 </head>
@@ -21,6 +20,7 @@
 <body class="page-about">
   <div id="top"></div>
 
+  <!-- ヘッダー -->
   <header>
     <div class="logo">
       <a href="index.html#top">iK相談支援センター</a>
@@ -44,7 +44,7 @@
     </div>
   </header>
 
-  <!-- ページ見出し -->
+  <!-- ページヒーロー -->
   <section class="page-hero section">
     <div class="container">
       <div class="section-title">
@@ -54,11 +54,10 @@
     </div>
   </section>
 
-  <!-- 1. 運営方針 -->
+  <!-- 運営方針 -->
   <section class="fade-in section">
     <div class="container">
       <h2>1. 運営方針</h2>
-
       <ul class="policy-list">
         <li>
           利用者がその有する能力及び適性に応じ、自立した日常生活又は社会生活を営むことができるよう、その利用者の心身の状況及びその置かれている環境に応じて、利用者の選択に基づき、適切な保健、医療、福祉、就労支援、教育等のサービスが、多様な事業者から、総合的かつ効率的に提供されるよう配慮して計画相談支援を行う。
@@ -74,17 +73,16 @@
     </div>
   </section>
 
-  <!-- 2. 職員配置状況 -->
+  <!-- 職員配置状況 -->
   <section class="fade-in section services-bg">
     <div class="container">
       <h2>2. 職員配置状況</h2>
-
       <p>令和8年1月1日現在</p>
       <p>相談支援専門員2名　その他職員2名</p>
     </div>
   </section>
 
-  <!-- 3. 加算体制 -->
+  <!-- 加算体制 -->
   <section class="fade-in section">
     <div class="container">
       <h2>主任相談支援専門員配置加算</h2>
@@ -123,7 +121,6 @@
       </div>
 
       <div class="footer-contact-area">
-        
         <div class="footer-contact-grid" aria-label="連絡先">
           <div class="contact-row contact-row-tel">
             <span class="contact-label">TEL</span>
@@ -152,6 +149,7 @@
   <!-- TOPへ戻るボタン -->
   <button id="to-top" aria-label="トップへ戻る">▲</button>
 
+  <!-- JavaScript -->
   <script src="script.js?v=20260119-1" defer></script>
 </body>
 </html>
