--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -4,16 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="format-detection" content="telephone=no">
-
   <title>プライバシーポリシー｜iK相談支援センター</title>
-
+  
   <!-- ファビコン -->
   <link rel="icon" href="picmov/iK-logo.png" type="image/png">
-
+  
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Kiwi+Maru:wght@300;400;500&display=swap" rel="stylesheet">
-
+  
   <!-- CSS -->
   <link rel="stylesheet" href="style.css?v=20260122-1">
 </head>
@@ -21,6 +20,7 @@
 <body class="page-about">
   <div id="top"></div>
 
+  <!-- ヘッダー -->
   <header>
     <div class="logo">
       <a href="index.html#top">iK相談支援センター</a>
@@ -30,7 +30,7 @@
       <ul>
         <li><a href="index.html#services">相談内容</a></li>
         <li><a href="index.html#flow">相談の流れ</a></li>
-        <li><a href="about.html" aria-current="page">事業所案内</a></li>
+        <li><a href="about.html">事業所案内</a></li>
         <li><a href="index.html#contact">お問い合わせ</a></li>
       </ul>
     </nav>
@@ -44,60 +44,63 @@
     </div>
   </header>
 
-<section class="page-hero section">
-  <div class="container">
-    <div class="section-title">
-      <h2>プライバシーポリシー</h2>
-      <span>個人情報の取り扱いについて</span>
+  <!-- ページヒーロー -->
+  <section class="page-hero section">
+    <div class="container">
+      <div class="section-title">
+        <h2>プライバシーポリシー</h2>
+        <span>個人情報の取り扱いについて</span>
+      </div>
     </div>
-  </div>
-</section>
+  </section>
 
-<section class="section">
-  <div class="container policy-block">
-    <h3>1. 基本方針</h3>
-        <p>iK相談支援センター（以下「当事業所」）は、利用者および従業員の個人情報の重要性を認識し、<br>個人情報保護法その他の関連法令を遵守し、適切に個人情報を取り扱います。</p>
-        <p>本プライバシーポリシーは、当事業所における個人情報の取り扱いに関する基本方針を定めたものです。</p>
+  <!-- プライバシーポリシー内容 -->
+  <section class="section">
+    <div class="container policy-block">
+      <h3>1. 基本方針</h3>
+      <p>iK相談支援センター（以下「当事業所」）は、利用者および従業員の個人情報の重要性を認識し、<br>個人情報保護法その他の関連法令を遵守し、適切に個人情報を取り扱います。</p>
+      <p>本プライバシーポリシーは、当事業所における個人情報の取り扱いに関する基本方針を定めたものです。</p>
 
-    <h3>2. 個人情報の取得</h3>
-        <p>当事業所は、利用者や従業員から以下のような個人情報を適法かつ公正な手段で取得します。</p>
-        <P>・氏名、住所、生年月日、電話番号などの基本情報</P>
-        <p>・健康状態、障害の程度、緊急連絡先等の医療・福祉関連情報</P>
-        <p>・雇用契約に関する情報（履歴書、雇用契約書等</P>
+      <h3>2. 個人情報の取得</h3>
+      <p>当事業所は、利用者や従業員から以下のような個人情報を適法かつ公正な手段で取得します。</p>
+      <p>・氏名、住所、生年月日、電話番号などの基本情報</p>
+      <p>・健康状態、障害の程度、緊急連絡先等の医療・福祉関連情報</p>
+      <p>・雇用契約に関する情報（履歴書、雇用契約書等</p>
 
-    <h3>3. 個人情報の利用目的</h3>
-        <p>当事業所は、取得した個人情報を以下の目的で利用します。</p>
-        <p>・就労支援サービスの提供</p>
-        <p>・雇用契約の管理、給与の支払い等の人事業務</p>
-        <p>・利用者の安全管理や緊急時対応のための情報提供</p>
-        <p>・その他、法律に基づく対応</p>
+      <h3>3. 個人情報の利用目的</h3>
+      <p>当事業所は、取得した個人情報を以下の目的で利用します。</p>
+      <p>・就労支援サービスの提供</p>
+      <p>・雇用契約の管理、給与の支払い等の人事業務</p>
+      <p>・利用者の安全管理や緊急時対応のための情報提供</p>
+      <p>・その他、法律に基づく対応</p>
 
-    <h3>4. 個人情報の第三者提供</h3>
-        <p>当事業所は、次の場合を除き、利用者や従業員の個人情報を第三者に提供することはありません。</p>
-        <p>・本人の同意がある場合</p> 
-        <p>・法令に基づく場合</p> 
-        <p>・人の生命、身体または財産の保護のために必要がある場合</p>
+      <h3>4. 個人情報の第三者提供</h3>
+      <p>当事業所は、次の場合を除き、利用者や従業員の個人情報を第三者に提供することはありません。</p>
+      <p>・本人の同意がある場合</p>
+      <p>・法令に基づく場合</p>
+      <p>・人の生命、身体または財産の保護のために必要がある場合</p>
 
-    <h3>5. 個人情報の管理</h3>
-        <p>当事業所は、利用者および従業員の個人情報を厳重に管理し、漏洩、紛失、改ざん、不正アクセスなどのリスクを防止するため、適切なセキュリティ対策を講じます。</p>
+      <h3>5. 個人情報の管理</h3>
+      <p>当事業所は、利用者および従業員の個人情報を厳重に管理し、漏洩、紛失、改ざん、不正アクセスなどのリスクを防止するため、適切なセキュリティ対策を講じます。</p>
 
-    <h3>6. 個人情報の開示・訂正・削除</h3>
-        <p>利用者および従業員は、当事業所に対して、自己の個人情報の開示、訂正、削除を請求することができます。</p>
-        <p>その際は、本人確認を行ったうえで、法令に従って適切に対応いたします。</p>
+      <h3>6. 個人情報の開示・訂正・削除</h3>
+      <p>利用者および従業員は、当事業所に対して、自己の個人情報の開示、訂正、削除を請求することができます。</p>
+      <p>その際は、本人確認を行ったうえで、法令に従って適切に対応いたします。</p>
 
-    <h3>7. 法令遵守と改善</h3>
-        <p>当事業所は、個人情報の取り扱いに関する法令およびその他の規範を遵守し、個人情報保護の取り組みを継続的に見直し、改善します。</p>
+      <h3>7. 法令遵守と改善</h3>
+      <p>当事業所は、個人情報の取り扱いに関する法令およびその他の規範を遵守し、個人情報保護の取り組みを継続的に見直し、改善します。</p>
 
-    <h3>8. お問い合わせ窓口</h3>
-        <p>個人情報に関するお問い合わせ、開示請求、その他のご相談は、以下の窓口までご連絡ください。</p>
-        <p>・事業所名: iK相談支援センター</p>
-        <p>・所在地: 福岡県北九州市小倉南区八重洲町11-20 2階</p>
-        <p>・電話1: 080-9106-0625 / 電話2: 070-3133-3592</p>
-        <p>・FAX: 093-383-1328</p>
-        <p>・開所日: 令和8年1月1日</p>
-        <p>・担当: 伊藤</p>       
-  </div>
-</section>
+      <h3>8. お問い合わせ窓口</h3>
+      <p>個人情報に関するお問い合わせ、開示請求、その他のご相談は、以下の窓口までご連絡ください。</p>
+      <p>・事業所名: iK相談支援センター</p>
+      <p>・所在地: 福岡県北九州市小倉南区八重洲町11-20 2階</p>
+      <p>・電話1: 080-9106-0625 / 電話2: 070-3133-3592</p>
+      <p>・FAX: 093-383-1328</p>
+      <p>・開所日: 令和8年1月1日</p>
+      <p>・担当: 伊藤</p>
+    </div>
+  </section>
+
   <!-- フッター -->
   <footer>
     <div class="footer-container">
@@ -111,7 +114,6 @@
       </div>
 
       <div class="footer-contact-area">
-        
         <div class="footer-contact-grid" aria-label="連絡先">
           <div class="contact-row contact-row-tel">
             <span class="contact-label">TEL</span>
@@ -140,6 +142,7 @@
   <!-- TOPへ戻るボタン -->
   <button id="to-top" aria-label="トップへ戻る">▲</button>
 
+  <!-- JavaScript -->
   <script src="script.js?v=20260119-1" defer></script>
 </body>
 </html>
