地図ズレ修正

--- a/contact_policy.html
+++ b/contact_policy.html
@@ -185,7 +185,7 @@
       <div class="footer-logo-area">
         <h3>株式会社iK</h3>
         <p class="footer-address">
-          <a href="https://maps.google.com/?q=〒802-0831 北九州市小倉南区八重洲町11-20" target="_blank" rel="noopener">
+          <a href="https://maps.google.com/?q=〒802-0831 北九州市小倉南区八重洲町11-20"  rel="noopener">
             〒802-0831 北九州市小倉南区八重洲町11-20 2階
           </a>
         </p>
@@ -208,7 +208,7 @@
 
           <div class="contact-row contact-row-policy">
             <span class="contact-label">Policy</span>
-            <a href="privacypolicy.html" target="_blank" rel="noopener">プライバシーポリシー</a>
+            <a href="privacypolicy.html"  rel="noopener">プライバシーポリシー</a>
           </div>
         </div>
       </div>
