--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Kiwi+Maru:wght@300;400;500&display=swap" rel="stylesheet">
   
   <!-- CSS -->
-  <link rel="stylesheet" href="style.css?v=20260122-1">
+  <link rel="stylesheet" href="style.css?v=20260122-2">
 </head>
 
 <body class="page-about">
@@ -54,59 +54,71 @@
     </div>
   </section>
 
-  <!-- 運営方針 -->
-  <section class="fade-in section">
-    <div class="container">
-      <h2>1. 運営方針</h2>
-      <ul class="policy-list">
-        <li>
-          利用者がその有する能力及び適性に応じ、自立した日常生活又は社会生活を営むことができるよう、その利用者の心身の状況及びその置かれている環境に応じて、利用者の選択に基づき、適切な保健、医療、福祉、就労支援、教育等のサービスが、多様な事業者から、総合的かつ効率的に提供されるよう配慮して計画相談支援を行う。
-        </li>
-        <li>利用者の意思及び人格を尊重し、常に利用者の立場に立って事業を行う。</li>
-        <li>
-          利用者に提供される福祉サービス等が特定の種類又は特定の障害福祉サービス事業を行う者に不当に偏ることのないよう、公正中立に事業を行う。
-        </li>
-        <li>
-          市町村、障害福祉サービス事業を行う者等との連携を図り、地域において必要な社会資源の改善及び開発に努める。
-        </li>
-      </ul>
-    </div>
-  </section>
+  <!-- コンテンツ全体を枠で囲む -->
+  <div class="content-wrapper">
+    <!-- 運営方針 -->
+    <section class="fade-in section">
+      <div class="container">
+        <div class="policy-block">
+          <h2>1. 運営方針</h2>
+          <ul class="policy-list">
+            <li>
+              利用者がその有する能力及び適性に応じ、自立した日常生活又は社会生活を営むことができるよう、その利用者の心身の状況及びその置かれている環境に応じて、利用者の選択に基づき、適切な保健、医療、福祉、就労支援、教育等のサービスが、多様な事業者から、総合的かつ効率的に提供されるよう配慮して計画相談支援を行う。
+            </li>
+            <li>利用者の意思及び人格を尊重し、常に利用者の立場に立って事業を行う。</li>
+            <li>
+              利用者に提供される福祉サービス等が特定の種類又は特定の障害福祉サービス事業を行う者に不当に偏ることのないよう、公正中立に事業を行う。
+            </li>
+            <li>
+              市町村、障害福祉サービス事業を行う者等との連携を図り、地域において必要な社会資源の改善及び開発に努める。
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
 
-  <!-- 職員配置状況 -->
-  <section class="fade-in section services-bg">
-    <div class="container">
-      <h2>2. 職員配置状況</h2>
-      <p>令和8年1月1日現在</p>
-      <p>相談支援専門員2名　その他職員2名</p>
-    </div>
-  </section>
+    <!-- 職員配置状況 -->
+    <section class="fade-in section">
+      <div class="container">
+        <div class="policy-block">
+          <h2>2. 職員配置状況</h2>
+          <p>令和8年1月1日現在</p>
+          <p>相談支援専門員2名　その他職員2名</p>
+        </div>
+      </div>
+    </section>
 
-  <!-- 加算体制 -->
-  <section class="fade-in section">
-    <div class="container">
-      <h2>主任相談支援専門員配置加算</h2>
+    <!-- 加算体制 -->
+    <section class="fade-in section">
+      <div class="container">
+        <div class="policy-block">
+          <h2>3. 加算体制</h2>
 
-      <h2>行動障害支援体制加算</h2>
-      <p>
-        行動障害のある知的障害者や精神障害者の方々に対して適切な計画相談支援等を実施するために、
-        強度行動障害支援者養成研修（実践研修）を修了し、専門的な知識及び支援技術を持つ相談支援専門員を配置しております。
-      </p>
+          <h3>主任相談支援専門員配置加算</h3>
+          <p>専門性の高い主任相談支援専門員を配置しております。</p>
 
-      <h2>要医療児者支援体制加算</h2>
-      <p>
-        重症心身障害など医療的なケアを要する児童や障害者に対して適切な計画相談支援等を実施するために、
-        医療的ケア児等コーディネーター養成研修を修了し、専門的な知識及び支援技術を持つ相談支援専門員を配置しております。
-      </p>
+          <h3>行動障害支援体制加算</h3>
+          <p>
+            行動障害のある知的障害者や精神障害者の方々に対して適切な計画相談支援等を実施するために、
+            強度行動障害支援者養成研修（実践研修）を修了し、専門的な知識及び支援技術を持つ相談支援専門員を配置しております。
+          </p>
 
-      <h2>精神障害者支援体制加算</h2>
-      <p>
-        精神科病院等に入院する者及び地域において単身生活等をする精神障がい者に対し、
-        地域移行支援や地域定着支援のマネジメントを含めた適切な計画相談支援等を実施するために、
-        「精神障害者支援の障害特性と支援技法を学ぶ研修」を修了した相談支援専門員を配置しております。
-      </p>
-    </div>
-  </section>
+          <h3>要医療児者支援体制加算</h3>
+          <p>
+            重症心身障害など医療的なケアを要する児童や障害者に対して適切な計画相談支援等を実施するために、
+            医療的ケア児等コーディネーター養成研修を修了し、専門的な知識及び支援技術を持つ相談支援専門員を配置しております。
+          </p>
+
+          <h3>精神障害者支援体制加算</h3>
+          <p>
+            精神科病院等に入院する者及び地域において単身生活等をする精神障がい者に対し、
+            地域移行支援や地域定着支援のマネジメントを含めた適切な計画相談支援等を実施するために、
+            「精神障害者支援の障害特性と支援技法を学ぶ研修」を修了した相談支援専門員を配置しております。
+          </p>
+        </div>
+      </div>
+    </section>
+  </div>
 
   <!-- フッター -->
   <footer>
@@ -137,7 +149,7 @@
 
           <div class="contact-row contact-row-policy">
             <span class="contact-label">Policy</span>
-            <a href="privacypolicy.html" target="_blank" rel="noopener">プライバシーポリシー</a>
+            <a href="privacypolicy.html" rel="noopener">プライバシーポリシー</a>
           </div>
         </div>
       </div>
