--- a/contact_policy.html
+++ b/contact_policy.html
@@ -208,7 +208,7 @@
 
           <div class="contact-row contact-row-policy">
             <span class="contact-label">Policy</span>
-            <a href="privacypolicy.html" target="_blank" rel="noopener">プライバシーポリシー</a>
+            <a href="privacypolicy.html">プライバシーポリシー</a>
           </div>
         </div>
       </div>
