--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
       </p>
 
       <p class="form-privacy">
-        <a href="contact_policy.html" class="form-privacy-link" target="_blank" rel="noopener">
+        <a href="contact_policy.html" class="form-privacy-link">
           お問い合わせに関する個人情報の取り扱いについて
         </a>
       </p>
@@ -349,7 +349,7 @@
 
           <div class="contact-row contact-row-policy">
             <span class="contact-label">Policy</span>
-            <a href="privacypolicy.html" target="_blank" rel="noopener">プライバシーポリシー</a>
+            <a href="privacypolicy.html">プライバシーポリシー</a>
           </div>
         </div>
       </div>
