--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
       <ul>
         <li><a href="#services">相談内容</a></li>
         <li><a href="#flow">相談の流れ</a></li>
-        <li><a href="about.html">事業所案内</a></li>
+        <li><a href="#about">事業所案内</a></li>
+        <li><a href="about.html">運営方針</a></li>
         <li><a href="#contact">お問い合わせ</a></li>
       </ul>
     </nav>
