--- a/contact_policy.html
+++ b/contact_policy.html
@@ -95,7 +95,8 @@
       <ul>
         <li><a href="index.html#services">相談内容</a></li>
         <li><a href="index.html#flow">相談の流れ</a></li>
-        <li><a href="about.html">事業所案内</a></li>
+        <li><a href="index.html#about">事業所案内</a></li>
+        <li><a href="about.html">運営方針</a></li>
         <li><a href="index.html#contact">お問い合わせ</a></li>
       </ul>
     </nav>
