--- a/contact_policy.html
+++ b/contact_policy.html
@@ -96,7 +96,7 @@
         <li><a href="index.html#services">相談内容</a></li>
         <li><a href="index.html#flow">相談の流れ</a></li>
         <li><a href="index.html#about">事業所案内</a></li>
-        <li><a href="about.html">運営方針</a></li>
+        <li><a href="privacypolicy.html">運営方針</a></li>
         <li><a href="index.html#contact">お問い合わせ</a></li>
       </ul>
     </nav>
@@ -209,7 +209,7 @@
 
           <div class="contact-row contact-row-policy">
             <span class="contact-label">Policy</span>
-            <a href="privacypolicy.html">プライバシーポリシー</a>
+            <a href="privacypolicy.html" target="_blank" rel="noopener">運営方針</a>
           </div>
         </div>
       </div>
