--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <li><a href="#services">相談内容</a></li>
         <li><a href="#flow">相談の流れ</a></li>
         <li><a href="#about">事業所案内</a></li>
-        <li><a href="about.html">運営方針</a></li>
+        <li><a href="privacypolicy.html">運営方針</a></li>
         <li><a href="#contact">お問い合わせ</a></li>
       </ul>
     </nav>
@@ -246,7 +246,7 @@
     </div>
 
     <div class="about-page-cta">
-      <a href="about.html" class="btn-sub">事業所案内（運営方針・職員配置・加算体制）を見る</a>
+      <a href="privacypolicy.html" class="btn-sub">運営方針</a>
     </div>
 
     <!-- 会社概要 -->
