--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="format-detection" content="telephone=no">
-  <title>プライバシーポリシー｜iK相談支援センター</title>
+  <title>運営方針｜iK相談支援センター</title>
   
   <!-- ファビコン -->
   <link rel="icon" href="picmov/iK-logo.png" type="image/png">
@@ -31,13 +31,13 @@
         <li><a href="index.html#services">相談内容</a></li>
         <li><a href="index.html#flow">相談の流れ</a></li>
         <li><a href="index.html#about">事業所案内</a></li>
-        <li><a href="about.html">運営方針</a></li>
+        <li><a href="privacypolicy.html" aria-current="page">運営方針</a></li>
         <li><a href="index.html#contact">お問い合わせ</a></li>
       </ul>
     </nav>
 
     <div class="menu-btn" id="menu-toggle" aria-label="メニューを開閉" role="button" tabindex="0">
-      <span></span>
+      <span>運営方針・職員配置状況・加算体制・プライバシーポリシー</span>
     </div>
 
     <div class="header-contact">
@@ -49,14 +49,70 @@
   <section class="page-hero section">
     <div class="container">
       <div class="section-title">
-        <h2>プライバシーポリシー</h2>
-        <span>個人情報の取り扱いについて</span>
+        <h2>1. 運営方針</h2>
+        <span>運営方針・職員配置状況・加算体制</span>
       </div>
     </div>
   </section>
 
-  <!-- プライバシーポリシー内容 -->
-  <section class="section">
+  <!-- 運営方針 -->
+  <section class="fade-in section">
+    <div class="container">
+      <h2>1. 運営方針</h2>
+      <ul class="policy-list">
+        <li>
+          利用者がその有する能力及び適性に応じ、自立した日常生活又は社会生活を営むことができるよう、その利用者の心身の状況及びその置かれている環境に応じて、利用者の選択に基づき、適切な保健、医療、福祉、就労支援、教育等のサービスが、多様な事業者から、総合的かつ効率的に提供されるよう配慮して計画相談支援を行う。
+        </li>
+        <li>利用者の意思及び人格を尊重し、常に利用者の立場に立って事業を行う。</li>
+        <li>
+          利用者に提供される福祉サービス等が特定の種類又は特定の障害福祉サービス事業を行う者に不当に偏ることのないよう、公正中立に事業を行う。
+        </li>
+        <li>
+          市町村、障害福祉サービス事業を行う者等との連携を図り、地域において必要な社会資源の改善及び開発に努める。
+        </li>
+      </ul>
+    </div>
+  </section>
+
+  <!-- 職員配置状況 -->
+  <section class="fade-in section services-bg">
+    <div class="container">
+      <h2>2. 職員配置状況</h2>
+      <p>令和8年1月1日現在</p>
+      <p>相談支援専門員2名　その他職員2名</p>
+    </div>
+  </section>
+
+  <!-- 加算体制 -->
+  <section class="fade-in section">
+    <div class="container">
+      <h2>3. 主任相談支援専門員配置加算</h2>
+
+      <h3>行動障害支援体制加算</h3>
+      <p>
+        行動障害のある知的障害者や精神障害者の方々に対して適切な計画相談支援等を実施するために、
+        強度行動障害支援者養成研修（実践研修）を修了し、専門的な知識及び支援技術を持つ相談支援専門員を配置しております。
+      </p>
+
+      <h3>要医療児者支援体制加算</h3>
+      <p>
+        重症心身障害など医療的なケアを要する児童や障害者に対して適切な計画相談支援等を実施するために、
+        医療的ケア児等コーディネーター養成研修を修了し、専門的な知識及び支援技術を持つ相談支援専門員を配置しております。
+      </p>
+
+      <h3>精神障害者支援体制加算</h3>
+      <p>
+        精神科病院等に入院する者及び地域において単身生活等をする精神障がい者に対し、
+        地域移行支援や地域定着支援のマネジメントを含めた適切な計画相談支援等を実施するために、
+        「精神障害者支援の障害特性と支援技法を学ぶ研修」を修了した相談支援専門員を配置しております。
+      </p>
+    </div>
+  </section>
+  <!-- プライバシーポリシー -->
+  <section class="fade-in section services-bg">
+    <div class="container">
+      <h2>4. プライバシーポリシー</h2>
+    </div>
     <div class="container policy-block">
       <h3>1. 基本方針</h3>
       <p>iK相談支援センター（以下「当事業所」）は、利用者および従業員の個人情報の重要性を認識し、<br>個人情報保護法その他の関連法令を遵守し、適切に個人情報を取り扱います。</p>
@@ -101,6 +157,7 @@
       <p>・担当: 伊藤</p>
     </div>
   </section>
+
 
   <!-- フッター -->
   <footer>
