--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -188,7 +188,7 @@
 
           <div class="contact-row contact-row-policy">
             <span class="contact-label">Policy</span>
-            <a href="privacypolicy.html">プライバシーポリシー</a>
+            <a href="privacypolicy.html">運営方針</a>
           </div>
         </div>
       </div>
