--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -49,7 +49,7 @@
   <section class="page-hero section">
     <div class="container">
       <div class="section-title">
-        <h2>1. 運営方針</h2>
+        <h2>運営方針・プライバシーポリシー</h2>
         <span>運営方針・職員配置状況・加算体制</span>
       </div>
     </div>
