コード整理

--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -36,8 +36,8 @@
       </ul>
     </nav>
 
-    <div class="menu-btn" id="menu-toggle" aria-label="メニューを開閉" role="button" tabindex="0">
-      <span>運営方針・職員配置状況・加算体制・プライバシーポリシー</span>
+    <div class="menu-btn" id="menu-toggle" aria-label="メニューを開閉" aria-expanded="false" role="button" tabindex="0" aria-controls="nav-menu">
+      <span></span>
     </div>
 
     <div class="header-contact">
