--- a/contact_policy.html
+++ b/contact_policy.html
@@ -101,7 +101,7 @@
       </ul>
     </nav>
 
-    <div class="menu-btn" id="menu-toggle" aria-label="メニューを開閉" role="button" tabindex="0">
+    <div class="menu-btn" id="menu-toggle" aria-label="メニューを開閉" aria-expanded="false" role="button" tabindex="0" aria-controls="nav-menu">
       <span></span>
     </div>
 
