--- a/contact_policy.html
+++ b/contact_policy.html
@@ -85,6 +85,14 @@
 <body class="page-about">
   <div id="top"></div>
 
+
+  <!-- オープニングアニメーション -->
+  <div id="opening-splash">
+    <img src="picmov/iK-logo.png" alt="株式会社iK ロゴ" id="splash-mark">
+    <div id="splash-logo">iK相談支援センター</div>
+  </div>
+
+
   <!-- ヘッダー -->
   <header>
     <div class="logo">
