--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
         <p>支援方法を学ぶ下記研修を修了した<br>相談支援専門員を配置しております。</p>
         
         <ul class="training-list" aria-label="研修一覧">
-          <li>主任相談支援専門院研修</li>
+          <li>主任相談支援専門員研修</li>
           <li>相談支援従事者現任研修</li>
           <li>強度行動障害支援者養成研修（基礎/実践）</li>
           <li>医療的ケア児等コーディネーター養成研修</li>
