--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -123,14 +123,14 @@
     </div>
     <div class="container policy-block">
       <h3>1. 基本方針</h3>
-      <p>iK相談支援センター（以下「当事業所」）は、利用者および従業員の個人情報の重要性を認識し、<br>個人情報保護法その他の関連法令を遵守し、適切に個人情報を取り扱います。</p>
+      <p>相談支援事業所 iK相談支援センター（以下「当事業所」）は、利用者および従業員の個人情報の重要性を認識し、<br>個人情報保護法その他の関連法令を遵守し、適切に個人情報を取り扱います。</p>
       <p>本プライバシーポリシーは、当事業所における個人情報の取り扱いに関する基本方針を定めたものです。</p>
 
       <h3>2. 個人情報の取得</h3>
       <p>当事業所は、利用者や従業員から以下のような個人情報を適法かつ公正な手段で取得します。</p>
       <p><span class="policy-bullet">・</span>氏名、住所、生年月日、電話番号などの基本情報</p>
       <p><span class="policy-bullet">・</span>健康状態、障害の程度、緊急連絡先等の医療・福祉関連情報</p>
-      <p><span class="policy-bullet">・</span>雇用契約に関する情報（履歴書、雇用契約書等</p>
+      <p><span class="policy-bullet">・</span>雇用契約に関する情報（履歴書、雇用契約書等）</p>
 
       <h3>3. 個人情報の利用目的</h3>
       <p>当事業所は、取得した個人情報を以下の目的で利用します。</p>
@@ -158,11 +158,11 @@
       <h3>8. お問い合わせ窓口</h3>
       <p>個人情報に関するお問い合わせ、開示請求、その他のご相談は、以下の窓口までご連絡ください。</p>
       <p><span class="policy-bullet">・</span>事業所名: iK相談支援センター</p>
-      <p><span class="policy-bullet">・</span>所在地: 福岡県北九州市小倉南区八重洲町11-20 2階</p>
+      <p><span class="policy-bullet">・</span>所在地: 北九州市小倉南区八重洲町11-20 2階</p>
       <p><span class="policy-bullet">・</span>電話1: 080-9106-0625 / 電話2: 070-3133-3592</p>
       <p><span class="policy-bullet">・</span>FAX: 093-383-1328</p>
       <p><span class="policy-bullet">・</span>開所日: 令和8年1月1日</p>
-      <p><span class="policy-bullet">・</span>担当: 伊藤</p>
+      <p><span class="policy-bullet">・</span>管理者: 伊藤</p>
     </div>
   </section>
 
